Fixed IE6 cellspacing issue

--- a/skin/frontend/default/blue/css/styles-ie.css
+++ b/skin/frontend/default/blue/css/styles-ie.css
@@ -56,7 +56,7 @@ button.btn-checkout { height:38px; }
 .form-list label { position:relative; z-index:0; }
 .form-list label.required em { position:absolute; top:0; right:-8px; }
 
-table { face-color:expression(runtimeStyle.scrollbarFaceColor = '#fff', cellSpacing = 0); }
+table { scrollbar-face-color:expression(runtimeStyle.scrollbarFaceColor = '#fff', cellSpacing = 0); }
 
 .product-view .product-img-box .zoom.disabled { filter:alpha(opacity=30); }
 
