--- a/skin/frontend/default/default/css/styles-ie.css
+++ b/skin/frontend/default/default/css/styles-ie.css
@@ -55,7 +55,7 @@ button.btn-checkout { height:40px; }
 .form-list label { position:relative; z-index:0; }
 .form-list label.required em { position:absolute; top:0; right:-8px; }
 
-table { face-color:expression(runtimeStyle.scrollbarFaceColor = '#fff', cellSpacing = 0); }
+table { scrollbar-face-color:expression(runtimeStyle.scrollbarFaceColor = '#fff', cellSpacing = 0); }
 
 .product-view .product-img-box .zoom.disabled { filter:alpha(opacity=30); }
 
