--- a/skin/frontend/default/modern/css/styles-ie.css
+++ b/skin/frontend/default/modern/css/styles-ie.css
@@ -67,7 +67,7 @@ button.btn-checkout { height:28px; }
 .cart .discount .buttons-set button.button,
 .cart .shipping .buttons-set button.button { height:19px; }
 
-table { face-color:expression(runtimeStyle.scrollbarFaceColor = '#fff', cellSpacing = 0); }
+table { scrollbar-face-color:expression(runtimeStyle.scrollbarFaceColor = '#fff', cellSpacing = 0); }
 
 .product-view .product-img-box .zoom.disabled { filter:alpha(opacity=30); }
 
